--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     /* Botão "PLAY" - estilo branco com canto arredondado */
     .play-button {
-      margin-top: -40px; /* fica sobreposto na base do robô? ajusta conforme a imagem */
+      margin-top: -40px; /* fica sobreposto na base do robô? ajusta conforme sua imagem */
       padding: 8px 16px;
       border: 2px solid #ccc;
       border-radius: 20px;
@@ -212,10 +212,9 @@
     </div>
 
     <main>
-      <!-- TÍTULO + IFRAME DO JOGO -->
+      <!-- 1) TÍTULO HANNAHGAME E IFRAME ANTES DE "Choose your level" -->
       <h2>HannahGame</h2>
       <iframe 
-        id="gameIframe"
         src="game.html" 
         width="100%" 
         height="800px" 
@@ -237,8 +236,19 @@
   <!-- Firebase Auth Script -->
   <script>
     // ------------------------------------------------------
-    // 1) Evitar múltipla inicialização do Firebase
+    // 1) Configuração do Firebase
     // ------------------------------------------------------
+    var firebaseConfig = {
+      apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+      authDomain: "hannahenglishcourse.firebaseapp.com",
+      databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "hannahenglishcourse",
+      storageBucket: "hannahenglishcourse.appspot.com",
+      messagingSenderId: "449818788486",
+      appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+      measurementId: "G-07VVJG9LRS"
+    };
+    // Evitar erro de inicialização dupla:
     if (!firebase.apps.length) {
       firebase.initializeApp(firebaseConfig);
     }
@@ -246,8 +256,8 @@
     // ------------------------------------------------------
     // 2) Variáveis globais TTS
     // ------------------------------------------------------
-    let englishVoice = null;     // Armazena alguma voz "en"
-    let hasEnglishVoice = false; // Se existe ao menos 1 voz com "en"
+    let englishVoice = null;     
+    let hasEnglishVoice = false; 
 
     // ------------------------------------------------------
     // 3) Função para buscar voz em inglês
@@ -255,7 +265,6 @@
     function pickAnyEnglishVoice() {
       const voices = speechSynthesis.getVoices() || [];
       for (let v of voices) {
-        // Ex.: "en-US", "en-GB", "en-AU"
         if (v.lang.toLowerCase().includes("en")) {
           hasEnglishVoice = true;
           return v;
@@ -300,7 +309,7 @@
       const invitationContainer = document.getElementById("invitationContainer");
 
       if (user) {
-        // Usuário logado => esconde o robô + convite
+        // Usuário logado => esconde robô + convite
         roboContainer.style.display       = "none";
         invitationContainer.style.display = "none";
 
@@ -309,7 +318,7 @@
         userRef.once("value").then((snapshot) => {
           const userData = snapshot.val() || {};
           const userName = userData.nome || user.email;
-          const userAvatar = userData.avatar
+          const userAvatar = userData.avatar 
             ? `imagens/${userData.avatar}`
             : "imagens/bonecologin1.png";
 
@@ -338,7 +347,7 @@
                 const turmaId = "-O8mdLgStvNqNf6x-O5l"; // Ajuste conforme seu BD
                 const alunoId = user.uid;
 
-                const profStudent =
+                const profStudent = 
                   professorData &&
                   professorData.turmas &&
                   professorData.turmas[turmaId] &&
@@ -346,8 +355,9 @@
                   professorData.turmas[turmaId].students[alunoId];
 
                 const nivelLiberado = (profStudent && profStudent.nivel_em_curso)
-                                      ? profStudent.nivel_em_curso
-                                      : null;
+                  ? profStudent.nivel_em_curso
+                  : null;
+
                 if (nivelLiberado) {
                   liberarNiveis([nivelLiberado]);
                 } else {
@@ -380,7 +390,7 @@
           });
         });
       } else {
-        // Não está logado => exibe robô + convite
+        // Não está logado => mostra robô + convite
         roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
 
@@ -416,7 +426,7 @@
     // ------------------------------------------------------
     document.getElementById("loginContainer").addEventListener("click", function(event) {
       const user = firebase.auth().currentUser;
-      if (!user) return; // Evita abrir dropdown se não estiver logado
+      if (!user) return; 
       event.preventDefault();
       const dropdown = document.getElementById("userDropdown");
       dropdown.style.display = (dropdown.style.display === "none" || dropdown.style.display === "") ? "block" : "none";
@@ -450,7 +460,7 @@
       if (event.target.id === "logout") {
         firebase.auth().signOut().then(() => {
           console.log("Usuário deslogado");
-          location.reload(); // Recarrega a página após deslogar
+          location.reload(); 
         }).catch((error) => {
           console.error("Erro ao deslogar:", error);
         });
