--- a/game.html
+++ b/game.html
@@ -248,6 +248,24 @@ let currentStatus = "idle";
 let currentDifficulty = "easy";
 let totalPoints = 0;
 
+// Função para carregar o dicionário do servidor
+async function loadDictionary() {
+  try {
+    const response = await fetch("dictionaries/words_alpha.txt"); // Verifique o caminho correto do arquivo
+    if (!response.ok) {
+      throw new Error(`Failed to load dictionary: ${response.statusText}`);
+    }
+    const text = await response.text();
+    dictionarySet = new Set(text.split("\n").map(word => word.trim().toLowerCase()));
+    console.log("Dicionário carregado com sucesso. Total de palavras:", dictionarySet.size);
+  } catch (error) {
+    console.error("Erro ao carregar o dicionário:", error);
+  }
+}
+
+// Chamar a função para carregar o dicionário
+loadDictionary();
+
 // Guardamos TODAS as linhas (tentativas) vindas do DB
 let attemptsArray = []; 
 // A linha atual (blocos que o usuário está digitando agora):
