--- a/game.html
+++ b/game.html
@@ -453,6 +453,7 @@ function renderAllAttempts() {
       }
       rowDiv.appendChild(block);
     });
+
     // Nome do jogador
     const playerSpan = document.createElement("span");
     playerSpan.classList.add("player-name");
@@ -462,16 +463,16 @@ function renderAllAttempts() {
     board.appendChild(rowDiv);
   });
 
-  // Se o jogo estiver in_progress => render a "current row" (blocos vazios)
+  // Render a "current row" (blocos vazios para a tentativa atual)
   if (currentStatus === "in_progress" && currentWord) {
     const newRowDiv = document.createElement("div");
     newRowDiv.classList.add("attempt-row");
 
-    // currentLetters tem as letras digitadas
-    for (let i=0; i<currentWord.length; i++) {
+    // Gera os blocos vazios para a palavra atual
+    for (let i = 0; i < currentWord.length; i++) {
       const block = document.createElement("div");
       block.classList.add("letter-block");
-      block.textContent = currentLetters[i] ? currentLetters[i].toUpperCase() : "";
+      block.textContent = currentLetters[i] ? currentLetters[i].toUpperCase() : ""; // Insere apenas letras digitadas
       newRowDiv.appendChild(block);
     }
     board.appendChild(newRowDiv);
